change dob to birthday model

--- a/app/views/birthdays/index.html.erb
+++ b/app/views/birthdays/index.html.erb
@@ -8,5 +8,6 @@
   <% end %>
 </ul>
 
-<h1>New Article</h1>
-# <%= a href="<%= new_article_path %>">New Article</a>
+<h2>
+<a href="<%= new_birthday_path %>">Enter New Birthday</a>
+</h2>
