--- a/app/views/birthdays/new.html.erb
+++ b/app/views/birthdays/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Birthday</h1>
 
-<%= form_with model: @birthday do |form| %>
+<%= form_with model: @birthdays do |form| %>
   <div>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
