fixed post route

--- a/app/views/birthdays/index.html.erb
+++ b/app/views/birthdays/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @birthdays.each do |birthday| %>
     <li>
-    <a href="<%= birthday_path(birthday)%>"><%= birthday.name  %></a> was born on <%= birthday.birthday %>
+    <a href="<%= birthday_path(birthday)%>"><%= birthday.name  %></a> was born on <%= birthday.dob %>
     </li>
   <% end %>
 </ul>
