--- a/app/views/birthdays/index.html.erb
+++ b/app/views/birthdays/index.html.erb
@@ -8,6 +8,6 @@
   <% end %>
 </ul>
 
-<h2>
-<a href="<%= new_birthday_path %>">Enter New Birthday</a>
-</h2>
+<%= link_to "Enter New Birthday", new_birthday_path %>
+
+<p><%= link_to "Log out", logout_path %></p>
