--- a/app/views/birthdays/new.html.erb
+++ b/app/views/birthdays/new.html.erb
@@ -1,23 +1,7 @@
 <h1>New Birthday</h1>
 
-<%= form_with model: @birthday, url: birthdays_path do |form| %>
-  <div>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-    <% @birthday.errors.full_messages_for(:name).each do |message| %>
-        <div><%= message %></div>
-    <% end %>
-  </div>
+<%= render "form", birthday: @birthday %>
 
-  <div>
-    <%= form.label :dob %><br>
-    <%= form.text_area :dob %>
-    <% @birthday.errors.full_messages_for(:dob).each do |message| %>
-        <div><%= message %></div>
-    <% end %>
-  </div>
+<%= link_to "Cancel", birthdays_path %>
 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+<p><%= link_to "Log out", logout_path %></p>
